Fix gaps for HYPERLINKS animation

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ pre {
 
 #hyperlinks pre {
     font-size: 24px;
-    line-height: 1;
+    line-height: .5;
     margin: 0;
     padding: 0;
     display: block;
